Add persistence and service layer for security

--- a/gateway/src/main/resources/application-default.yml
+++ b/gateway/src/main/resources/application-default.yml
@@ -1,3 +1,6 @@
+server:
+  port: 80
+
 spring:
   application:
     name: gateway
@@ -24,5 +27,5 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
-server:
-  port: 80
+security:
+  sessions: ALWAYS
