--- a/game/src/main/resources/application-default.yml
+++ b/game/src/main/resources/application-default.yml
@@ -1,11 +1,7 @@
-eureka:
-  instance:
-    preferIpAddress: true
-  client:
-    healthcheck:
-      enabled: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+quizServerPath: http://quiz-server/quizzes
+
+server:
+  port: 8080
 
 spring:
   application:
@@ -17,8 +13,20 @@ spring:
     database: "h2"
     hibernate:
       ddl-auto: "create-drop"
+  session:
+    store-type: redis
+  redis:
+    host: redis
+    port: 6379
 
-server:
-  port: 8080
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    healthcheck:
+      enabled: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
 
-quizServerPath: http://quiz-server/quizzes
+security:
+  sessions: NEVER
