--- a/gateway/src/main/resources/application-default.yml
+++ b/gateway/src/main/resources/application-default.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: gateway
+  session:
+    store-type: redis
+  redis:
+    host: redis
+    port: 6379
 
 zuul:
   routes:
