--- a/gateway/src/main/resources/application-docker.yml
+++ b/gateway/src/main/resources/application-docker.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: gateway
+  session:
+    store-type: redis
+  redis:
+    host: redis
+    port: 6379
 
 zuul:
   routes:
