--- a/player/src/main/resources/application-default.yml
+++ b/player/src/main/resources/application-default.yml
@@ -1,11 +1,5 @@
-eureka:
-  instance:
-    preferIpAddress: true
-  client:
-    healthcheck:
-      enabled: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+server:
+  port: 8082
 
 spring:
   application:
@@ -17,6 +11,20 @@ spring:
     database: "h2"
     hibernate:
       ddl-auto: "create-drop"
+  session:
+    store-type: redis
+  redis:
+    host: redis
+    port: 6379
 
-server:
-  port: 8082
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    healthcheck:
+      enabled: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
+security:
+  sessions: NEVER
