--- a/quiz/src/main/resources/application-docker.yml
+++ b/quiz/src/main/resources/application-docker.yml
@@ -1,12 +1,3 @@
-eureka:
-  instance:
-    preferIpAddress: true
-  client:
-    healthcheck:
-      enabled: true
-    serviceUrl:
-      defaultZone: http://eureka:8761/eureka/
-
 spring:
   application:
     name: quiz-server
@@ -19,3 +10,20 @@ spring:
     database: "postgresql"
     hibernate:
       ddl-auto: "update"
+  session:
+    store-type: redis
+  redis:
+    host: redis
+    port: 6379
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    healthcheck:
+      enabled: true
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka/
+
+security:
+  sessions: NEVER
