--- a/game/pom.xml
+++ b/game/pom.xml
@@ -13,15 +13,32 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!--DTOs-->
         <dependency>
             <groupId>no.gardos</groupId>
             <artifactId>schema</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!--Spring-->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-core</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!--Api documentation-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
