Remove Zuul filter on sensitive headers for better session handling

--- a/gateway/src/main/resources/application-docker.yml
+++ b/gateway/src/main/resources/application-docker.yml
@@ -11,12 +11,16 @@ zuul:
   routes:
     category:
       path: /categories/**
+      sensitive-headers:
     question:
       path: /questions/**
+      sensitive-headers:
     quiz:
       path: /quizzes/**
+      sensitive-headers:
     game:
       path: /games/**
+      sensitive-headers:
 
 eureka:
   instance:
