--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <spring-cloud.version>Edgware.SR3</spring-cloud.version>
         <rest-assured.version>3.0.1</rest-assured.version>
         <springfox.version>2.6.1</springfox.version>
+        <testcontainers.version>1.6.0</testcontainers.version>
     </properties>
 
     <dependencies>
@@ -93,6 +94,14 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${springfox.version}</version>
+            </dependency>
+
+            <!--Test-->
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
