--- a/game/src/test/resources/application.yml
+++ b/game/src/test/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   jpa:
     show-sql: true
+  session:
+    store-type: hash_map
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
 
 security:
   basic:
