--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <rest-assured.version>3.0.1</rest-assured.version>
         <springfox.version>2.6.1</springfox.version>
         <testcontainers.version>1.6.0</testcontainers.version>
+        <wiremock.version>2.2.1</wiremock.version>
     </properties>
 
     <dependencies>
@@ -69,6 +70,12 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-standalone</artifactId>
+            <version>${wiremock.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
