--- a/gateway/src/main/resources/application-docker.yml
+++ b/gateway/src/main/resources/application-docker.yml
@@ -9,14 +9,10 @@ spring:
 
 zuul:
   routes:
-    category:
-      path: /categories/**
-    question:
-      path: /questions/**
-    quiz:
-      path: /quizzes/**
-    game:
-      path: /games/**
+    quiz-server:
+      path: /quiz-server/**
+    game-server:
+      path: /game-server/**
   sensitive-headers:
 
 eureka:
