--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       context: gateway
       dockerfile: Dockerfile
     ports:
-      - "80:8080"
+      - "80:8080" #TODO: Change port
     depends_on:
       - eureka
       - redis
