--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>quiz</module>
         <module>gateway</module>
         <module>endToEnd</module>
+        <module>score</module>
     </modules>
 
     <name>QuizExercise</name>
