Add sending of game-over messages over RabbitMq

--- a/game/src/main/resources/application-docker.yml
+++ b/game/src/main/resources/application-docker.yml
@@ -12,6 +12,8 @@ spring:
     database: "postgresql"
     hibernate:
       ddl-auto: "update"
+  rabbitmq:
+    host: rabbitmq
   session:
     store-type: redis
   redis:
