--- a/game/src/main/resources/application-default.yml
+++ b/game/src/main/resources/application-default.yml
@@ -13,6 +13,8 @@ spring:
     database: "h2"
     hibernate:
       ddl-auto: "create-drop"
+  rabbitmq:
+    host: localhost
   session:
     store-type: redis
   redis:
